각 서비스단의 예외처리 추가